--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Шаблон v-di42</title>
+    <title>Mebi Nabi V-Di42</title>
   </head>
 
   <body>
     <header class="page-header">
       <div class='container'>
-        Тут должны быть контакты
+        Нет толку от слов, нужны действия!
       </div>
     </header>
 
@@ -23,11 +23,11 @@
 
     <section class="intro">
       <div class='container'>
-        <h2 class="subheading">Давайте познакомимся</h2>
-        <h3>Пара слов о себе</h3>
-        <p>Я только начал во всём разбираться, но хочется узнать больше и сделать отличный сайт-портфолио!</p>
-        <h3>Чем могу быть полезен</h3>
-        <p>А об этом мы узнаем позже</p>
+        <h2 class="subheading">MPV</h2>
+        <h3>Всё только начинается!</h3>
+        <p>Дальше будет лучше!</p>
+        <h3>Интересно, что это?</h3>
+        <p>Тогда заходи почаще</p>
       </div>
     </section>
 
@@ -39,13 +39,13 @@
         <p>Шаблон</p>
 
         <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
+        <p>Для начала изучим HTML и CSS.</p>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class='container'>
-        v-di42@yandex.ru
+        Контакты
       </div>
     </footer>
   </body>
