--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="intro">
       <div class='container'>
-        <h2 class="subheading">MPV</h2>
+        <h2 class="subheading">MVP</h2>
         <h3>Всё только начинается!</h3>
         <p>Дальше будет лучше!</p>
         <h3>Интересно, что это?</h3>
