--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Mebi Nabi V-Di42</title>
+    <title>Mebi Nabi</title>
   </head>
 
   <body>
     <header class="page-header">
       <div class='container'>
-        Нет толку от слов, нужны действия!
+        <a class="header-email" href="mailto:v-di42@yandex.ru">v-di42@yandex.ru</a>
+        <a class="header-phone" href="tel:+79131374144">+79131374144</a>
       </div>
     </header>
 
@@ -24,6 +25,9 @@
     <section class="intro">
       <div class='container'>
         <h2 class="subheading">MVP</h2>
+        <figure>
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография Дмитрий">
+</figure>
         <h3>Всё только начинается!</h3>
         <p>Дальше будет лучше!</p>
         <h3>Интересно, что это?</h3>
@@ -34,10 +38,13 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
-        <h3>Засекречено</h3>
-        <p>Шаблон</p>
-
+          <figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+</figure>
+        <h3>Сайт Кекса</h3>
+        <p>Первый сайт на курсе</p>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
+        
         <h3>Блог начинающего верстальщика</h3>
         <p>Для начала изучим HTML и CSS.</p>
       </div>
@@ -45,7 +52,8 @@
 
     <footer class="page-footer">
       <div class='container'>
-        Контакты
+       <a class="footer-email" href="mailto:v-di42@yandex.ru">v-di42@yandex.ru</a>
+       <a class="footer-phone" href="tel:+79131374144">+79131374144</a>
       </div>
     </footer>
   </body>
