--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class='container'>
         <h2 class="subheading">MVP</h2>
         <figure>
-          <img src="files/user.jpg" width="928" height="536" alt="Фотография Дмитрий">
+          <img src="files/user.jpeg" width="928" height="536" alt="Фотография Дмитрий">
 </figure>
         <h3>Всё только начинается!</h3>
         <p>Дальше будет лучше!</p>
