Add skills list
Добавили шкалу прогресса

--- a/index.html
+++ b/index.html
@@ -28,10 +28,24 @@
         <figure>
           <img src="files/user.jpeg" height="536" alt="Фотография Дмитрий">
 </figure>
-        <h3>Всё только начинается!</h3>
-        <p>Дальше будет лучше!</p>
-        <h3>Интересно, что это?</h3>
-        <p>Тогда заходи почаще</p>
+        <div>
+          <h3>Всё только начинается!</h3>
+          <p>Дальше будет лучше!</p>
+         </div>
+        <div>
+          <h3>Интересно, что это?</h3>
+          <p>Тогда заходи почаще</p>
+        </div>
+        <div class="skils">
+          <h3>Мои навыки</h3>
+           <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%;">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%;">40%</div></dd>
+           </dl>
+         </div>
+        
       </div>
     </section>
 
