--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="portfolio">
       <div class="container">
-        <h2 class="subheading">Мои работы</h2>
+        <h2 class="subheading">Что сделано</h2>
           <figure class="project-image">
   <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
 </figure>
