--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         
         <h3>Блог начинающего верстальщика</h3>
         <p>Для начала изучим HTML и CSS.</p>
+        
+        <h3>Хотите кофе?</h3>
+        <p>Тут можно посмотреть в каком виде кофе какое содержимое</p>
+        <a class="buttom" href="urce/project/coffe/index.html">Посмотреть</a>
       </div>
     </section>
 
