--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </figure>
         <h3>Сайт Кекса</h3>
         <p>Первый сайт на курсе</p>
-        <a class="button" href="source/project/index.html">Открыть страницу</a>
+        <a class="button" href="source/project/keks/index.html">Открыть страницу</a>
         
         <h3>Блог начинающего верстальщика</h3>
         <p>Для начала изучим HTML и CSS.</p>
