--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <h2 class="subheading">Что сделано</h2>
           <figure class="project-image">
-  <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+  <img src="files/project.jpeg" width="928" height="536" alt="Cайт инструктора Кекса">
 </figure>
         <h3>Сайт Кекса</h3>
         <p>Первый сайт на курсе</p>
