--- a/source/project/coffe/index.html
+++ b/source/project/coffe/index.html
@@ -20,7 +20,7 @@
       <button id="ristretto">Ristretto</button>
     </div>
     <div class="container">
-      <h1 class="coffee_name">Choose your coffee</h1>
+      <h1 class="coffee_name">Выбери свой кофе</h1>
       <div class="cup">
         <div class="filling reset">
           <div class="coffee">Coffee</div>
